@@ -1,3 +1,11 @@
+Fri Aug 16 17:32:02 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* test/profile_test_all.rb: refactoring memory profiling tool for
+	  test-all.
+	  Add profiling targets /proc/meminfo and /proc/self/status.
+
+	* test/runner.rb: accept other than 'true'.
+
 Fri Aug 16 11:23:35 2013  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* file.c (rb_file_size, rb_file_flock): improve performance of Winodws.
